# TaintTracer

./: .gitmodules  README.md  adb-cmd.sh  adb-pull-oat.sh  adb-pull-test.sh  adb-termux.sh  dashboard.sh  debug-tainttracer-remote.sh  debug-tainttracer.sh  device-status.sh  host-plot-server.sh  launcher.sh  launcher_dep.sh  lldb-remote-root.sh  lldb-root.sh  lldbinit  pull-plot.sh  run.sh  settings.gradle
app/: build.gradle  keystore.jks
app/src/androidTest/java/org/TaintTracer/TaintTracer/: TaintDebuggerTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp  source-sink-lib.cpp
app/src/main/cpp/android/: Debugging.cpp  Debugging.h  logging.cpp  logging.h
app/src/main/cpp/cmake/: AndroidABI.cmake
app/src/main/cpp/debugger/: Config.h  Debugger.cpp  Debugger.h  ELFImage.cpp  ELFImage.h  InstructionAnalyzer.cpp  InstructionAnalyzer.h  PendingProcessEvents.cpp  PendingProcessEvents.h  Process.cpp  Process.h  Syscall.cpp  Syscall.h  TaintpropBreakpointOptimizer.cpp  TaintpropBreakpointOptimizer.h  WaitEvent.cpp  WaitEvent.h
app/src/main/cpp/debugger/arch/: aarch64.cpp  aarch64.h
app/src/main/cpp/debugger/binder/: BinderDriver.cpp  BinderDriver.h  Parcel.cpp  Parcel.h
app/src/main/cpp/debugger/binder/services/: ActivityManagerService.cpp  ActivityManagerService.h  BinderService.cpp  BinderService.h  ContactsProvider2.cpp  ContactsProvider2.h  LocationManager.cpp  LocationManager.h  ServiceManager.cpp  ServiceManager.h
app/src/main/cpp/debugger/breakpoint/: BreakpointHandler.cpp  BreakpointHandler.h  ImageBreakpoints.cpp  ImageBreakpoints.h  InstructionBreakpoint.cpp  InstructionBreakpoint.h
app/src/main/cpp/debugger/files/: FileDescriptorTable.cpp  FileDescriptorTable.h
app/src/main/cpp/debugger/memory/: MemoryMap.cpp  MemoryMap.h  MemoryRegion.cpp  MemoryRegion.h  MergingRegionSet.cpp  MergingRegionSet.h  PhysicalMemory.cpp  PhysicalMemory.h  VirtualAddressSpace.cpp  VirtualAddressSpace.h
app/src/main/cpp/debugger/procfs/: Process.cpp  Process.h  ProcessMapState.cpp  ProcessMapState.h  ProcessMapsEntry.cpp  ProcessMapsEntry.h
app/src/main/cpp/debugger/taint/: AnnotatedAddressSpace.h  MemoryToTaint.cpp  MemoryToTaint.h  TaintEvent.cpp  TaintEvent.h  TaintValues.cpp  TaintValues.h
app/src/main/cpp/debugger/taint/execution/: ExecutionUnit.cpp  ExecutionUnit.h  InstructionUnit.cpp  InstructionUnit.h  SystemCallUnit.cpp  SystemCallUnit.h
app/src/main/cpp/debugger/taint/sink/: GenericNativeSink.cpp  GenericNativeSink.h  NativeMethodSink.cpp  NativeMethodSink.h
app/src/main/cpp/debugger/taint/source/: ARTMethodSource.h  GenericNativeSource.cpp  GenericNativeSource.h  NativeMethodSource.cpp  NativeMethodSource.h  SyscallSource.h  TaintSource.cpp  TaintSource.h
app/src/main/cpp/debugger/vex/: IRSBResult.cpp  IRSBResult.h  VEXLifter.cpp  VEXLifter.h
app/src/main/cpp/launcher/: CMakeLists.txt  logging.h  main.cpp
app/src/main/cpp/libs/libelfin/dwarf/: CMakeLists.txt
app/src/main/cpp/libs/libelfin/elf/: CMakeLists.txt  mmap_loader.cc
app/src/main/cpp/libs/vex/: CMakeLists.txt  compile-android.sh
app/src/main/cpp/libs/vex/pub/: libvex.h  libvex_guest_offsets.h
app/src/main/cpp/test/: AnnotatedAddressSpace-test.cpp  NativeTaintPropagation-test.cpp  VEXLifter-test.cpp  VirtualAddressSpace-test.cpp  hwbkpt-test.cpp  mmap-test.cpp  ptrace-test.cpp  runner.cpp  taint_fns.c  taint_fns.h
app/src/main/java/org/TaintTracer/TaintTracer/: MainActivity.java  TestSourceSinkContextActivity.java
app/src/main/res/layout/: activity_main.xml  activity_test_source_sink_context.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/TaintTracer/TaintTracer/: ExampleUnitTest.java
docs/: ART.md
evaluation/: .gitignore
evaluation/caffeinemark/: caffeinemark_runner.sh  get_caffeinemark_score.sh  plot_scores.R  scores.csv  scores_QEMU.csv
evaluation/case-study/: TaintedMemoryOverTime.R  TaintedMemoryOverTime.sh
evaluation/demo/contexts/: README.md
evaluation/demo/performance/: tainted_benchmark.R  tainted_benchmark.csv
evaluation/demo/stop_events/: aggregate.csv  aggregate_log.py  stop_events.R
evaluation/droidbot/: activity_similarity.R
evaluation/introduction/: apk_native_ratio.sh
evaluation/overhead/: .gitignore  README.md  count_ins_java.sh  count_ins_native.sh  count_instructions.gdb  instrument_smali.awk  measure_overhead.sh
evaluation/overhead_new/: add_java_bench.sh  measure_overhead.sh  newJavaOverheadBenchmark.smali  plot.R  results.csv
gradle/wrapper/: gradle-wrapper.properties
lldb-scripts/: memtrace.py
lldb-target/: libncursesw.so.6  libpanelw.so.6  lldb
lldb-target/terminfo/d/: dtterm
lldb-target/terminfo/l/: linux
lldb-target/terminfo/p/: putty  putty-256color
lldb-target/terminfo/r/: rxvt  rxvt-256color
lldb-target/terminfo/s/: screen  screen-256color  st  st-256color
lldb-target/terminfo/t/: tmux  tmux-256color
lldb-target/terminfo/x/: xterm  xterm-16color  xterm-256color  xterm-new
repackaging/: .gitattributes  apk-fetch-from-device.sh  apk-install.sh  apk-move-downloaded.sh  apktool  classes_to_inject.py  deps.sh  droidbot_forcestop_patch.diff  repackage.sh  test-correctness-regen-summary.sh  test-correctness-summarize-run.cpp  test-correctness.sh
